--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,10 +42,15 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="PanReset",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=True,bCmd=False)
 +ActionMappings=(ActionName="ZoomIn",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ZoomOut",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Deselect",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=None
